fix(ui): Fix version, environment, and uptime visibility in navbar

--- a/presto-ui/src/static/assets/presto.css
+++ b/presto-ui/src/static/assets/presto.css
@@ -275,6 +275,10 @@ pre {
     min-width: 0;
 }
 
+.flex-basis-100 {
+    flex-basis: 100%;
+}
+
 .flex-basis-40 {
     flex-basis: 40%;
     min-width: 0;
